// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <div
    className="src-modules-talent-components-talents-grid-row__first-row"
  >
    <a
      href="/talent/some-id"
      rel="noopener"
      target="_blank"
    >
      The Name
    </a>
  </div>
  <Text
    autos={true}
    disabled={false}
    forceSingleLine={true}
    maxLength={100}
    onChange={[Function]}
    password={false}
    placeholder="Roles"
    readOnly={false}
    style={
      Object {
        "marginBottom": ".5rem",
      }
    }
    value="The Roles"
  />
  <Text
    autos={true}
    disabled={false}
    forceSingleLine={true}
    maxLength={100}
    onChange={[Function]}
    password={false}
    placeholder="Characters"
    readOnly={false}
    value="The Characters"
  />
</GridRow>
`;

exports[`should render correctly when there is no value.name field 1`] = `
<GridRow
  id="some-key"
  onDelete={[Function]}
>
  <div
    className="src-modules-talent-components-talents-grid-row__first-row"
  >
    <a
      href="/talent/some-id"
      rel="noopener"
      target="_blank"
    >
      TODO!!!
    </a>
  </div>
  <Text
    autos={true}
    disabled={false}
    forceSingleLine={true}
    maxLength={100}
    onChange={[Function]}
    password={false}
    placeholder="Roles"
    readOnly={false}
    style={
      Object {
        "marginBottom": ".5rem",
      }
    }
    value="The Roles"
  />
  <Text
    autos={true}
    disabled={false}
    forceSingleLine={true}
    maxLength={100}
    onChange={[Function]}
    password={false}
    placeholder="Characters"
    readOnly={false}
    value="The Characters"
  />
</GridRow>
`;
